syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "GroupSecretMatchProto";

import "GroupSecretProto.proto";

package groupSecret;


//匹配到的秘境状态
enum MatchSecretState{
	NON_BATTLE = 1;//未开战
	IN_BATTLE = 2;//战斗中
	IN_ROB_PROTECT = 3;//掠夺保护中
	IN_MAX_ROB_COUNT = 4;//已经掠夺到了上限
}

//请求的类型
enum RequestType{
	SEARCHING_ENEMY = 1;//搜索敌人
	ATTACK_ENEMY_START = 2;//攻击敌人
	ATTACK_ENEMY_END = 3;//通知战斗结果
	GET_REWARD = 4;//获取奖励
}

//参与战斗的角色的剩余血量能量信息
message HeroLeftInfo{
	required string id = 1;//英雄的Id
	required int32 leftLife = 2;//剩余的血量
	required int32 leftEnergy = 3;//剩余的能量
}

//请求攻击敌人的消息
message AttackEnemyStartReqMg{
	required GroupSecretIndex index = 1;//挑战那个矿点的敌人
	repeated string heroList = 2;//请求参与战斗的英雄信息
}

//请求攻击敌人的回应消息
message AttackEnemyStartRspMsg{
	repeated string armyInfo = 1;//敌人的ArmyInfo信息
}

//请求战斗结束的消息
message AttackEnemyEndReqMsg{
	repeated HeroLeftInfo heroLeftInfo = 1;//剩余的血量信息
}

message GroupSecretMatchCommonReqMsg{
	required RequestType reqType = 1;//请求类型
	optional string version = 2;//客户端的数据版本<暂时不需要这个，可以忽略>
}

message GroupSecretMatchCommonRspMsg{
	required RequestType reqType = 1;//请求类型
	required bool isSuccess = 2;//是否成功
	optional string tipMsg = 3;//提示消息
}